Increase padding & fix shadow overflow

--- a/src/routes/Home.module.scss
+++ b/src/routes/Home.module.scss
@@ -97,7 +97,7 @@
 .profiles {
   column-gap: 0.5rem;
   max-height: 100px;
-  padding: 1rem 0;
+  padding: 1.4rem 0;
   overflow-y: hidden;
   overflow-x: auto;
 
